# wForum-Backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose-example.yaml  justfile
api_document/: trapziu.postman.json
document/: Ryoxhi.postman.json  openapi.json  openapi.yaml  trapziu.postman.json  trapziu.postman_collection.json
prisma/: .env.example  Cargo.toml  schema.prisma
prisma/prisma/: schema.prisma
prisma/src/: main.rs
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  mod.rs
src/extractor/: extractor.rs  mod.rs
src/prisma/: mod.rs
src/service/: mod.rs
src/service/post/: mod.rs  model.rs  router.rs  service.rs
src/service/profile/: mod.rs  model.rs  router.rs  service.rs
src/service/user/: mod.rs  model.rs  router.rs  service.rs
src/service/utils/: checker.rs  helper.rs  mod.rs
